{
    "name": "Player1Controller",
    "maps": [
        {
            "name": "Gameplay",
            "id": "c36803d6-494e-4583-84ad-347a27cb42c0",
            "actions": [
                {
                    "name": "Climb",
                    "type": "Button",
                    "id": "66c9b3ec-c711-4e0b-a7af-fd1e5d91242b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move_X",
                    "type": "PassThrough",
                    "id": "fb3639c7-e723-4494-9f2b-1a53c656510d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hold",
                    "type": "PassThrough",
                    "id": "1e726c96-68a3-4e67-be64-1686f0848237",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Equip01",
                    "type": "Button",
                    "id": "16241a9b-689e-46b6-98a7-6882f405b1e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Equip02",
                    "type": "Button",
                    "id": "1da41566-0bb9-47c3-8016-bfff8c2f9042",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Equip03",
                    "type": "Button",
                    "id": "8cc51995-a5a1-4a9e-9750-b4e56c3272bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0c260b49-97c2-42c3-9a1b-15bff8586035",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e8bf63c-9bdf-46c1-ac8b-02203d4f26e7",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "926d1d9b-40c5-4202-ab13-b50dc95f918c",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20ed4670-415c-477a-9fd4-b073ffb9bd5e",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e033450-f296-4dd9-aae0-8b271675cfc7",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32b723dc-54ea-40ef-b6da-24508a4618e8",
                    "path": "<XInputController>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Equip01",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac8b0748-d6ec-4a3f-a94a-2e0daf29d7df",
                    "path": "<XInputController>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Equip02",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25739ddb-d824-48a1-93fc-3702fe44a475",
                    "path": "<XInputController>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Equip03",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}